# R-Type-multiplayer

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
assets/: sprites_pos.txt
assets/boum/: sprite_pos.txt
assets/bullet/: sprites_pos.txt
assets/player/: sprite_pos.txt
client/include/: Network.hpp
client/src/: Network.cpp  main.cpp
doc/: classDiagram.plantuml  communication_uml_seq.plantuml  interactions_environnement.plantuml  interractions_environnement.plantuml  protocol.txt  sequence.plantuml  sequence2.plantuml
models/: object.hpp
server/include/: ClientServerSide.hpp  GameContainer.hpp  Network.hpp  Server.hpp
server/src/: ClientServerSide.cpp  GameContainer.cpp  Network.cpp  Server.cpp  main.cpp
src/client/include/: Debug_color.hpp  Network.hpp
src/client/src/: Network.cpp  main.cpp
src/factory/include/: factory.hpp
src/factory/src/: factory.cpp
src/gameEngine/action_ns/include/: Action.hpp  IAction.hpp  Moove.hpp
src/gameEngine/action_ns/src/: Action.cpp  IAction.cpp  Moove.cpp
src/gameEngine/audio_ns/include/: Audio.hpp  FX.hpp  Music.hpp
src/gameEngine/audio_ns/src/: Audio.cpp  FX.cpp  Music.cpp
src/gameEngine/event_ns/include/: Event.hpp
src/gameEngine/event_ns/src/: Event.cpp
src/gameEngine/gameEngine_ns/include/: GameEngine.hpp
src/gameEngine/gameEngine_ns/src/: GameEngine.cpp
src/gameEngine/geometry_ns/include/: Rectangle.hpp  Vector.hpp
src/gameEngine/geometry_ns/src/: Rectangle.cpp  Vector.cpp
src/gameEngine/object_ns/include/: IObject.hpp  Object.hpp  Sprite.hpp
src/gameEngine/object_ns/src/: IObject.cpp  Object.cpp  Sprite.cpp
src/gameEngine/window_ns/include/: Window.hpp
src/gameEngine/window_ns/src/: Window.cpp
src/gameObjects/include/: Explosion.hpp  Laser.hpp  Monster.hpp  Parallax.hpp  Player.hpp
src/gameObjects/src/: Explosion.cpp  Laser.cpp  Monster.cpp  Parallax.cpp  Player.cpp
src/server/include/: ClientServerSide.hpp  Debug_color.hpp  GameContainer.hpp  Server.hpp
src/server/src/: GameContainer.cpp  Server.cpp  main.cpp
src/utils/error/include/: Error.hpp
src/utils/error/src/: Error.cpp
src/utils/models/: environment.hpp  position.hpp
src/utils/parsing/include/: parsing.hpp
src/utils/parsing/src/: parsing.cpp
tests/: CMakeCache.txt  GameEngine.test.cpp  Makefile  Rectangle.test.cpp  Vector.test.cpp  server_tests.cpp  test_send_command.cpp
